<resources>
    <string name="app_name">Assignment1</string>
    <string name="Fear_button">Fear</string>
    <string name="Joy_button">Joy</string>
    <string name="Love_button">Love</string>
    <string name="Surpise_button">Surprise</string>
    <string name="Anger_button">Anger</string>
    <string name="Sadness_button">Sadness</string>
    <string name="mainHeader">What are you feeling?</string>
    <string name="historyButtonText">View/Edit History</string>
    <string name="comment_prompt">Enter a comment (optional)</string>
    <string name="commentHint">Enter a comment here (optional)</string>
    <string name="title_activity_edit_comment">editCommentActivity</string>
</resources>
